src/objects/SPE_SurveyResponse__c.object
<CustomObject>
    <description>Survey Response object is basically stored to survey response once respondents gives the Survey feedback. Survey Response object stores the Question, Answer (Given by respondent) and Score for that particular answer.</description>
    <fields>
        <fullName>Alternate_Language__c</fullName>
        <label>Alternate Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnswerType__c</fullName>
        <formula>Text(Questions__r.AnswerType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Answer</label>
        <referenceTo>SPE_SurveyAnswer__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BooleanChoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Choice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChoiceForFreeText__c</fullName>
        <label>Choice For Free Text</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Choice__c</fullName>
        <formula>Answers__r.Choices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Choice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EncryptedEnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <formula>&apos;True&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enterprise ID DeprecatedDoNotUse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Definition</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionName__c</fullName>
        <formula>Questions__r.SurveyQuestion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respondent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Survey Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPEPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Plan</label>
        <referenceTo>SPE_SPEPlan__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPETracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>IF(  ISBLANK(Answers__c) , ChoiceForFreeText__c ,  Answers__r.Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Tracker</label>
        <referenceTo>SPE2_SurveyTracker__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SurRes-{0000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>